test/ref.ruse
// fail

fn main() int {
    var a int
    var b = &a
    &&a // error
    *a // error
    &(*b)
    a + b // error
    b = 3 // error

    var c *int
    var d *int = a // error
}
